--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -83,6 +87,9 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  margin: 0;
+  height: 100%;
+  width: 100%;
 }
 
 body {
